# purePursuitAndPID

./: .gitignore
PurePursuitAlgorithms/: README.md  What is PID & How Can We Use.pptx  example.py  example1.py  ~$What is PID & How Can We Use.pptx
install/: local_setup.sh  setup.sh
install/pid_velocity_controller/lib/pid_velocity_controller/: pid_velocity_node
install/pid_velocity_controller/share/pid_velocity_controller/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/pure_pursuit_controller/lib/pure_pursuit_controller/: pure_pursuit_node
install/pure_pursuit_controller/share/pure_pursuit_controller/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/pure_pursuit_controller/share/pure_pursuit_controller/launch/: pure_pursuit_launch.py
install/pure_pursuit_controller/share/pure_pursuit_controller/waypoints/: waypoints.csv
log/: latest_build
my_run/: metadata.yaml  my_run_0.db3
src/pid_velocity_controller/: package.xml  setup.cfg  setup.py
src/pid_velocity_controller/pid_velocity_controller/: pid_velocity_node.py
src/pure_pursuit_controller/: package.xml  setup.py
src/pure_pursuit_controller/pure_pursuit_controller/: pure_pursuit_node.py
src/pure_pursuit_controller/pure_pursuit_controller/waypoints/: waypoint_generator.py
