<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
             schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pure_pursuit_controller</name>
  <version>0.1.0</version>
  <description>Pure Pursuit lateral controller</description>
  <maintainer email="junaetmahbub4@gmail.com">Junaet Mahbub</maintainer>
  <license>Apache-2.0</license>

  <!-- runtime dependencies -->
  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf_transformations</depend>
  <depend>numpy</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
